se agrega link en login y signup

--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -39,4 +39,5 @@
         <button class="btn btn-primary btn-block mt-5" type="submit">Register!</button>
 
     </form>
+    <p class="mt-4">I have an account <a href="{% url 'login' %}">Sign in here.</a></p>
 {% endblock container %}
