--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -24,4 +24,5 @@
         <button class="btn btn-primary btn-block mt-5" type="submit">Sign in!</button> 
         
     </form>
+    <p class="mt-4">Don't have an account yet? <a href="{% url 'signup' %}">Sign up here.</a></p>
 {% endblock container %}
