--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -10,7 +10,7 @@
         <p class="alert alert-danger">{{ error }}</p>  
     {% endif %}
 
-    <form action="{% url 'signup' %}" method='POST'>
+    <form action="{% url 'users:signup' %}" method='POST'>
         {% csrf_token %}
         <div class="form-group">
             <input type="text" class="form-control" placeholder='Username' name="username" required="true">
@@ -39,5 +39,5 @@
         <button class="btn btn-primary btn-block mt-5" type="submit">Register!</button>
 
     </form>
-    <p class="mt-4">I have an account <a href="{% url 'login' %}">Sign in here.</a></p>
+    <p class="mt-4">I have an account <a href="{% url 'users:login' %}">Sign in here.</a></p>
 {% endblock container %}
