--- a/templates/nav.html
+++ b/templates/nav.html
@@ -12,7 +12,9 @@
                 <li class="nav-item">
                     <a href="">
                     {% if request.user.profile.picture %}
-                        <img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
+                        <a href=" {% url 'users:detail' request.user.username %} ">
+                            <img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
+                        </a>
                     {% else %}
                         <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
                     {% endif %}
