se agregan ejemplo de uso de generic auth views

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,8 +6,11 @@
 
 {% block container %}
 
-    {% if error %}
-        <p class="alert alert-danger">{{ error }}</p>
+    {% if form.errors %}
+        <p class="alert alert-danger">
+            Your username and password didn't match.
+            please try agin
+        </p>
     {% endif %}
 
     <form method="POST" action="{% url "users:login" %}">
