--- a/templates/users/update_profile.html
+++ b/templates/users/update_profile.html
@@ -9,8 +9,8 @@
 
 <div class="container">
 
-    <div class="row justify-content-md-center">
-        <div class="col-6 p-4" id="profile-box">
+    <div class="row center">
+        <div class="col-sm-12 col-md-8 offset-md-2 mt-5 p-3 post-container" id="profile-box">
 
             <form action="{% url 'users:update' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
@@ -23,8 +23,13 @@
                 {% endif %}
                     
                     <div class="media-body">
-                        <h5 class="ml-4">@{{ user.username }} | {{user.get_full_name}}</h5>
-                        <p class="ml-4"><input type="file" name="picture"  ></p>
+                        <h5 class="ml-4">@{{ user.username }} </h5>
+                        <p class="ml-4">
+                        <label for="profile_photo" class="rounded">
+                        <i class="fas fa-edit"></i> Add photo
+                        </label>
+                        <input type="file" id="profile_photo" name="picture" style="display:none;" >
+                        </p>
                     </div>
                 </div>
                     {% for error in form.picture.errors %}
