--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,20 +5,20 @@
         <a class="navbar-brand pr-5" style="border-right: 1px solid #efefef;" href="{% url 'posts:feed' %}">
             <img src="{% static "img/instagram.png" %}" height="45" class="d-inline-block align-top"/>
         </a>
-
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#platziNav" aria-controls="platziNav" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="platziNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a href="">
+                    <a href="#">
                     {% if request.user.profile.picture %}
                         <a href=" {% url 'users:detail' request.user.username %} ">
                             <img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
                         </a>
                     {% else %}
                         <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
-                    {% endif %}
-                    
+                    {% endif %}                    
                     </a>
                 </li>
 
