--- a/templates/users/details.html
+++ b/templates/users/details.html
@@ -13,8 +13,8 @@
             </div>
             <div class="col-sm-8">
                 <h2 style="font-weight: 100;">
-                    {{ user.username }}
-                    {% if user == user %}
+                    @{{ user.username }}
+                    {% if user == request.user %}
                         <a
                             href="{% url "users:update" %}"
                             class="ml-5 btn btn-sm btn-outline-info"
@@ -22,23 +22,29 @@
                             Edit profile
                         </a>
                     {% else %}
-                        <a
-                            href=""
-                            class="ml-5 btn btn-sm btn-primary"
-                        >
-                            Follow
-                        </a>
+                        {% if following %}
+                        <span id="buttonfollow">
+                            <button name="follow" id="{{user.profile.id}}"
+                                class="ml-5 btn btn-sm btn-outline-secondary">
+                                Following
+                            </button >
+                        </span>
+                        {% else %}
+                        <span id="buttonfollow">
+                            <button name="follow" id="{{user.profile.id}}"
+                                class="ml-5 btn btn-sm btn-primary">
+                                Follow
+                            </button >
+                        </span>
+                        {% endif %}
                     {% endif %}
                 </h2>
                 <div class="row mt-2" style="font-size: 1.2em">
                     <div class="col-sm-4">
-                        <b>{{ user.profile.posts_count }}785</b> posts
+                        <b>{{ posts|length }}</b> posts
                     </div>
                     <div class="col-sm-4">
-                        <b>{{ user.profile.followers }}1,401</b> followers
-                    </div>
-                    <div class="col-sm-4">
-                        <b>{{ user.profile.following }}491</b> following
+                        <b id="followers">{{ user.profile.total_follows }}</b> followers
                     </div>
                 </div>
                 <div class="row mt-4">
@@ -49,9 +55,9 @@
             </div>
         </div>
     </div>
-
-    <hr>
-    
+ 
+    <hr> 
+     
     <div class="container" id="user-post">
         <div class="row mt-3">
             {% for post in posts %}
